<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:fontFamily="fontawesome-webfont.ttf"
    >

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:id="@id/supplyCreate_header_field"
        android:layout_centerVertical="true"
        android:hint="@string/supply_title_hint"
        android:textColor="@android:color/black"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        >
    </com.beardedhen.androidbootstrap.BootstrapEditText>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:id="@id/supplyCreate_body_field"
                android:singleLine="true"
                android:hint="@string/supply_desc_hint"
                android:imeOptions="actionDone"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="0dp"
                    android:background="@color/bbutton_supply"
                    >
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:text="@string/created_by"
                        android:textAlignment="center"
                        android:enabled="false"
                        bootstrapbutton:bb_roundedCorners="false"
                        bootstrapbutton:bb_size="default"
                        bootstrapbutton:bb_type="supply"
                        bootstrapbutton:bb_text_alignment="center"
                        android:id="@id/supply_info_header_button"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">
                    </com.beardedhen.androidbootstrap.BootstrapButton>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="0dp">
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        android:text="@string/creator"
                        bootstrapbutton:bb_type="gray"
                        android:enabled="false"
                        android:textColor="@android:color/black"
                        android:singleLine="true"
                        android:id="@id/supplyCreate_creator_field"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">
                    </com.beardedhen.androidbootstrap.BootstrapButton>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="0dp">
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:text="@string/submit"
                        android:textAlignment="center"
                        android:enabled="true"
                        bootstrapbutton:bb_roundedCorners="false"
                        bootstrapbutton:bb_size="default"
                        bootstrapbutton:bb_type="primary"
                        bootstrapbutton:bb_text_alignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@id/supplyInfo_confirm_button"
                        android:layout_alignParentBottom="true">
                    </com.beardedhen.androidbootstrap.BootstrapButton>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="0dp">
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:text="@string/cancel"
                        android:textAlignment="center"
                        android:enabled="true"
                        bootstrapbutton:bb_roundedCorners="false"
                        bootstrapbutton:bb_size="default"
                        bootstrapbutton:bb_type="primary"
                        bootstrapbutton:bb_text_alignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@id/supplyInfo_cancel_button"
                        android:layout_alignParentBottom="true">
                    </com.beardedhen.androidbootstrap.BootstrapButton>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>